--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -22,3 +22,4 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=admin  # Set the MongoDB root username
       - MONGO_INITDB_ROOT_PASSWORD=admin123  # Set the MongoDB root password
 
+  # MongoDB service
